--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animejs": "^3.2.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "cloudinary-react": "^1.7.2",
     "concurrently": "^6.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -23,6 +24,7 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-image-file-resizer": "^0.4.7",
     "react-number-format": "^4.8.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
