--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass": "^1.43.4",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.1.9",
+    "typesense": "^1.2.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
