--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.1.9",
     "typesense": "^1.2.2",
+    "typesense-instantsearch-adapter": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
