--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "firebase": "^9.6.10",
     "fuse.js": "^6.4.6",
     "icomoon": "^1.0.0",
+    "instantsearch.css": "^7.4.5",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
+    "react-instantsearch-dom": "^6.24.2",
     "react-number-format": "^4.8.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
@@ -40,7 +42,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-typesense-server": "node scripts/startTypesenseServer.js"
   },
   "eslintConfig": {
     "extends": [
