--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Mercado a la Mano",
-  "name": "Mercado a la Mano",
+  "short_name": "Yelitos",
+  "name": "Yelitos",
   "icons": [
     {
       "src": "favicon.ico",
